# nodesoup

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO  gen_samples.py
demo/: CMakeLists.txt  dot2png.cpp
include/: nodesoup.hpp
include/nodesoup/: geometry.hpp  graph.hpp  nodesoup.hpp
samples/: bin_tree.dot  dense.dot  large_disconnected.dot  large_random.dot  quad_tree.dot  small_dense.dot
samples/thumbs/: quad_tree.dot
src/: CMakeLists.txt  algebra.hpp  dot.cpp  dot.hpp  floyd_warshall.cpp  floyd_warshall.hpp  fruchterman_reingold.cpp  fruchterman_reingold.hpp  geometry.cpp  geometry.hpp  graph.hpp  kamada_kawai.cpp  kamada_kawai.hpp  layout.cpp  layout.hpp  nodesoup.cpp
